@@ -1,3 +1,6 @@
+2014-07-09 Matt
+	* Adding track tool -- beginning of calculation of E-field from tracks
+
 2014-07-08 Matt:
 	* Committing scripts used for presenting at collaboration meeting.
 	* Tagging first version: 00.01
